# flappy-cv

./: .gitignore  GameOver.gd  GameOver.gd.uid  README.md  bird.gd  bird.gd.uid  bird.tscn  canvas_layer.tscn  ground.gd.uid  ground.tscn  icon.svg.import  main.gd  main.gd.uid  main.py  main.tscn  pipe.gd.uid  pipe.tscn  project.conf  project.godot  pyproject.toml  run.sh
.godot/: scene_groups_cache.cfg
.godot/editor/: bird.tscn-editstate-9f17d0b210d291ed810fb30d4ef3ee41.cfg  bird.tscn-folding-9f17d0b210d291ed810fb30d4ef3ee41.cfg  canvas_layer.tscn-editstate-101cc48b526e7c2b57ac74ad946dd731.cfg  canvas_layer.tscn-folding-101cc48b526e7c2b57ac74ad946dd731.cfg  create_recent.Node  editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  filesystem_update4  ground.tscn-editstate-a7aa136ce42fefa5d7ac4d182d639a67.cfg  ground.tscn-folding-a7aa136ce42fefa5d7ac4d182d639a67.cfg  main.tscn-editstate-3070c538c03ee49b7677ff960a3f5195.cfg  main.tscn-folding-3070c538c03ee49b7677ff960a3f5195.cfg  pipe.tscn-editstate-b9d6398a077b77d1e7126a2ec20511cb.cfg  pipe.tscn-folding-b9d6398a077b77d1e7126a2ec20511cb.cfg  project_metadata.cfg  quick_open_dialog_cache.cfg  script_editor_cache.cfg
.godot/imported/: Mobile - Flappy Bird - Miscellaneous - Version 1.2 Sprites (1).png-c8a6b0fecc2bae7e6b274b3023884051.md5  (+3 more)
assets/: Mobile - Flappy Bird - Miscellaneous - Version 1.2 Sprites (1).png.import  bg.png.import  bird1.png.import  bird2.png.import  bird3.png.import  ground.png.import  pipe.png.import  restart.png.import
lib/: bird.py  button.py  ground.py  pipe.py  sound.py  webcam.py
